--- a/Kraken/package.json
+++ b/Kraken/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "chai": "^4.5.0",
     "cucumber": "^6.0.7",
     "kraken-node": "^1.0.24"
   }
