--- a/Kraken/package.json
+++ b/Kraken/package.json
@@ -13,5 +13,8 @@
     "chai": "^4.5.0",
     "cucumber": "^6.0.7",
     "kraken-node": "^1.0.24"
+  },
+  "dependencies": {
+    "@faker-js/faker": "^9.2.0"
   }
 }
