--- a/Kraken/package.json
+++ b/Kraken/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "kraken-run": "./node_modules/kraken-node/bin/kraken-node run"
+    "kraken-run": "./node_modules/kraken-node/bin/kraken-node run",
+    "test-vrt": "node vrt.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,8 @@
     "kraken-node": "^1.0.24"
   },
   "dependencies": {
-    "@faker-js/faker": "^9.2.0"
+    "@faker-js/faker": "^9.2.0",
+    "@wdio/globals": "^8.10.6",
+    "resemblejs": "^5.0.0"
   }
 }
