--- a/Kraken/config.json
+++ b/Kraken/config.json
@@ -8,5 +8,26 @@
       "browser": "chrome",
       "version": "latest"
     }
-  ]
+  ],
+  "vrt": true,
+  "ghostBaseUrl": "http://localhost:2368/ghost/",
+  "ghostRcUrl": "http://localhost:2369/ghost/",
+  "browsers":["chromium"],
+  "options":{
+    "output": {
+      "errorColor": {
+        "red": 255,
+        "green": 255,
+        "blue": 10
+      },
+      "errorType": "movement",
+      "largeImageThreshold": 1200,
+      "useCrossOrigin": false,
+      "outputDiff": true
+    },
+    "scaleToSameSize": true,
+    "ignore": "antialiasing"
+  },
+  "viewportHeight":600,
+  "viewportWidth":800
 }
