move files automatically with command npm kraken-run

--- a/Kraken/config.json
+++ b/Kraken/config.json
@@ -9,6 +9,7 @@
       "version": "latest"
     }
   ],
+  "featureToTest": "members",
   "vrt": true,
   "ghostBaseUrl": "http://localhost:2368/ghost/",
   "ghostRcUrl": "http://localhost:2369/ghost/",
