Tests para dos versiones de Ghost

--- a/Cypress/.env
+++ b/Cypress/.env
@@ -2,3 +2,5 @@ CYPRESS_EMAIL_TEST1="davids_8899@hotmail.com"
 CYPRESS_PASSWORD_TEST1="39443950dE*"
 CYPRESS_EMAIL_TEST2="s.paeres10@uniandes.edu.co"
 CYPRESS_PASSWORD_TEST2="SantiMiso123!"
+GHOST_RC_VERSION_PORT="2369"
+GHOST_BASE_VERSION_PORT="2368"
