--- a/Kraken/config.json
+++ b/Kraken/config.json
@@ -10,16 +10,16 @@
     }
   ],
   "featureToTest": "members",
-  "vrt": true,
+  "vrt": false,
   "ghostBaseUrl": "http://localhost:2368/ghost/",
   "ghostRcUrl": "http://localhost:2369/ghost/",
   "browsers":["chromium"],
   "options":{
     "output": {
       "errorColor": {
-        "red": 255,
+        "red": 0,
         "green": 255,
-        "blue": 10
+        "blue": 255
       },
       "errorType": "movement",
       "largeImageThreshold": 1200,
