escenario 19 creado con vrt

--- a/Kraken/config.json
+++ b/Kraken/config.json
@@ -10,7 +10,7 @@
     }
   ],
   "featureToTest": "members",
-  "vrt": false,
+  "vrt": true,
   "ghostBaseUrl": "http://localhost:2368/ghost/",
   "ghostRcUrl": "http://localhost:2369/ghost/",
   "browsers":["chromium"],
