--- a/Kraken/config.json
+++ b/Kraken/config.json
@@ -9,8 +9,8 @@
       "version": "latest"
     }
   ],
-  "featureToTest": "members",
-  "vrt": true,
+  "featureToTest": false,
+  "vrt": false,
   "ghostBaseUrl": "http://localhost:2368/ghost/",
   "ghostRcUrl": "http://localhost:2369/ghost/",
   "browsers":["chromium"],
