--- a/Cypress/.env
+++ b/Cypress/.env
@@ -8,3 +8,4 @@ CYPRESS_EMAIL_TEST4="js.rodriguezm12345@uniandes.edu.co"
 CYPRESS_PASSWORD_TEST4="abcde12345"
 GHOST_RC_VERSION="5.43.2"
 GHOST_RC_VERSION_PORT="2368"
+API_KEY_MOCKAROO_PAGES="4c728640"
